--- a/css/slidemenu.css
+++ b/css/slidemenu.css
@@ -1,7 +1,7 @@
 .sidebar {
     z-index: 999999;
     position: fixed;
-    top:90px;
+    top:88px;
     bottom: -1px;
     padding: 0;
     width: auto;
